--- a/interface/devtools/cookie-list.html
+++ b/interface/devtools/cookie-list.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../popup/style.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Cookie-Editor</title>
+    <title>URL Cookie-Editor</title>
   </head>
 
   <body>
     <div id="pageTitle">
-      <h1 class="container">Cookie-Editor</h1>
+      <h1 class="container">URL Cookie-Editor</h1>
       <div id="main-menu">
         <button id="main-menu-button">
           <svg class="icon">
