--- a/interface/popup/cookie-list.html
+++ b/interface/popup/cookie-list.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Cookie-Editor</title>
+    <title>URL Cookie-Editor</title>
   </head>
 
   <body class="notransition">
     <div id="pageTitle">
       <h1 class="container">
-        Cookie-Editor
+        URL Cookie-Editor
       </h1>
       <div id="version"></div>
       <div id="main-menu">
@@ -52,6 +52,19 @@
 
     <div class="panel button-bar active" id="button-bar-default">
       <div class="panel-section panel-section-footer">
+        <button
+        class="panel-section-footer-button danger"
+        id="send-all-cookies"
+        type="button"
+      >
+        <div>
+          <svg class="icon">
+            <use href="../sprites/solid.svg#arrow-right"></use>
+          </svg>
+          <div class="tooltip" role="tooltip">SendServer</div>
+        </div>
+      </button>
+
         <button
           class="panel-section-footer-button"
           id="create-cookie"
